# BSplineX

./: .clang-format  .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  README.md.orig  TODO.md  analysis.mw  bsplinex.drawio  eigen.cmake  no_binary_search.py  random.txt  test.py  zellij-layout.kdl
.github/workflows/: publish_python_package.yml  run_cmake_inclusion_tests.yml  run_cpp_tests.yml
benchmarks/: CMakeLists.txt
benchmarks/bspline/: bench_bspline.cpp
bindings/python/: BSplineX.i  CMakeLists.txt  README.md  bsplinex_swig.hpp  pyproject.toml  setup.py
bindings/python/examples/: ex_evaluate.py
cmake/: catch.cmake  eigen.cmake
cmake/test_cmake_inclusion/: CMakeLists.txt  test.cpp
examples/: CMakeLists.txt  ex_evaluate.cpp  ex_fit.cpp  ex_swig_bug.cpp
include/: bsplinex.h  bsplinex.hpp  defines.hpp  types.hpp
include/BSplineX/: macros.h
include/BSplineX/bspline/: bspline.hpp  bspline_factory.hpp
include/BSplineX/control_points/: c_data.hpp
include/BSplineX/knots/: knots.hpp  t_atter.hpp  t_data.hpp  t_extrapolator.hpp  t_finder.hpp  t_padder.hpp
include/bspline/: bspline.hpp  bspline_factory.hpp  bspline_types.hpp
include/control_points/: c_atter.hpp  c_data.hpp  c_padder.hpp  control_points.hpp  cp_atter.hpp  cp_data.hpp  cp_padder.hpp
include/deboor/: deboor.hpp
include/knots/: atter.hpp  data.hpp  extrapolator.hpp  finder.hpp  interface.hpp  knots.hpp  padder.hpp  t_atter.hpp  t_data.hpp  t_extrapolator.hpp  t_finder.hpp  t_padder.hpp
tests/: CMakeLists.txt  reference_bspline.py  test_bspline_1d.cpp  test_knots.cpp  test_t_data.cpp  test_t_padder.cpp
tests/bspline/: bench_bspline.cpp  reference.py  test_bspline.cpp
tests/control_points/: test_c_atter.cpp  test_c_data.cpp  test_c_padder.cpp  test_control_points.cpp
tests/deboor/: reference.py  test_deboor.cpp
tests/knots/: test_knots.cpp  test_t_atter.cpp  test_t_data.cpp  test_t_extrapolator.cpp  test_t_finder.cpp  test_t_padder.cpp
